--- a/templates/index.html
+++ b/templates/index.html
@@ -49,11 +49,11 @@
 
             <!-- Genre Quick Links -->
                 <div class="flex flex-wrap gap-3 justify-center">
-                <a href="pop.html" class="px-4 py-2 bg-white bg-opacity-10 rounded-full hover:bg-opacity-20 transition border border-pink-400">Pop</a>
-                <a href="rock.html" class="px-4 py-2 bg-white bg-opacity-10 rounded-full hover:bg-opacity-20 transition border border-red-400">Rock</a>
-                <a href="hiphop.html" class="px-4 py-2 bg-white bg-opacity-10 rounded-full hover:bg-opacity-20 transition border border-yellow-400">Hip-Hop</a>
-                <a href="jazz_page.html" class="px-4 py-2 bg-white bg-opacity-10 rounded-full hover:bg-opacity-20 transition border border-blue-400">Jazz</a>
-                <a href="electro.html" class="px-4 py-2 bg-white bg-opacity-10 rounded-full hover:bg-opacity-20 transition border border-cyan-400">Électronique</a>
+                <a href="./pop.html" class="px-4 py-2 bg-white bg-opacity-10 rounded-full hover:bg-opacity-20 transition border border-pink-400">Pop</a>
+                <a href="./rock.html" class="px-4 py-2 bg-white bg-opacity-10 rounded-full hover:bg-opacity-20 transition border border-red-400">Rock</a>
+                <a href="./hiphop.html" class="px-4 py-2 bg-white bg-opacity-10 rounded-full hover:bg-opacity-20 transition border border-yellow-400">Hip-Hop</a>
+                <a href="./jazz_page.html" class="px-4 py-2 bg-white bg-opacity-10 rounded-full hover:bg-opacity-20 transition border border-blue-400">Jazz</a>
+                <a href="./electro.html" class="px-4 py-2 bg-white bg-opacity-10 rounded-full hover:bg-opacity-20 transition border border-cyan-400">Électronique</a>
             </div>
         </div>
     </section>
